<resources>
    <string name="app_name">Storage</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="group">Group:</string>
    <string name="product">Product:</string>
    <string name="quantity">Quantity:</string>
    <string name="unit">Unit:</string>
    <string name="price">Price:</string>
    <string name="charge">Charge:</string>
    <string name="update_item">Update Item</string>
    <string name="string">String</string>
    <string name="integer">Integer</string>
    <string name="decimal_0_00">Decimal 0.00</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="no_data">No Data</string>
    <string name="selling_price_sum">Selling price Sum:</string>
    <string name="basic_price_sum">Basic price Sum:</string>
    <string name="found">Found:</string>
    <string name="number_of_all_positions">Number of all positions:</string>
    <string name="leftover_goods_list">Leftover Goods List</string>
    <string name="order_list">Order List</string>
    <string name="storage">Storage</string>
    <string name="report">Sell</string>
    <string name="archive">Archive</string>
    <string name="analysis">Analysis</string>
    <string name="info">Info</string>
    <string name="setting">Setting</string>
    <string name="menu">MENU</string>
    <string name="number_of_all_positions2">Number of all positions:</string>
    <string name="order">Sell</string>
    <string name="cancel">Cancel</string>
    <string name="date">Date:</string>
    <string name="selling_price">Selling Price:</string>
    <string name="basic_price">Basic Price:</string>
    <string name="extra_charge">Extra charge:</string>
    <string name="total">Total:</string>
    <string name="total_selling_price">Total Selling Price:</string>
    <string name="selling_date">Selling Date:</string>
    <string name="available">Available:</string>
    <string name="selected">Selected:</string>
    <string name="save">Save</string>
    <string name="sort_by">Sort by:</string>
    <string name="sorting_method">Sorting method</string>
    <string name="choose_sort_method">Choose sort method</string>
    <string name="descending">descending</string>
    <string name="ascending">ascending</string>
    <string name="apply">Apply</string>
    <string name="search">Search</string>
    <string name="add_element">Add Element</string>
    <string name="sort_table">Sort Table</string>
    <string name="delete_all">Delete All</string>
    <string name="FilePath">You can find your files in Documents directory</string>
    <string name="choose_language">Choose language</string>
</resources>