<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/menu_search"
        android:title="@string/search"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_baseline_search_24"
        android:iconTint="@color/white"
        app:actionViewClass="android.widget.SearchView"
        />

    <item android:id="@+id/add_element"
        android:title="@string/add_element"
        android:icon="@drawable/ic_baseline_add_24"
        android:iconTint="@color/white"
        app:showAsAction="never"/>

    <item android:id="@+id/sort_table"
        android:title="@string/sort_table"
        app:showAsAction="never"/>
    <item android:id="@+id/delete_all"
        android:title="@string/delete_all"
        app:showAsAction="never"/>
</menu>