<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".db.AddItemToBdActivity">

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="88dp"
        android:text="@string/group"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="30dp"
        android:text="@string/product"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="30dp"
        android:text="@string/quantity"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="30dp"
        android:text="@string/unit"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="30dp"
        android:text="Price:"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <TextView
        android:id="@+id/tvAddItemHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Add Item"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="30dp"
        android:text="@string/charge"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />

    <LinearLayout
        android:id="@+id/llEditText"
        app:layout_constraintTop_toBottomOf="@+id/tvAddItemHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="95dp"
        android:layout_marginRight="12dp">


        <EditText
            android:id="@+id/edGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="26dp"
            android:layout_marginTop="12dp"
            android:layout_marginRight="26dp"
            android:gravity="left"
            android:hint="@string/string"
            android:inputType="textShortMessage"
            android:textSize="18dp"
            app:layout_constraintTop_toBottomOf="@+id/tvAddItemHeader" />


        <EditText
            android:id="@+id/edProduct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="26dp"
            android:layout_marginTop="12dp"
            android:layout_marginRight="26dp"
            android:gravity="left"
            android:hint="@string/string"
            android:inputType="textShortMessage"
            android:textSize="18dp"
            app:layout_constraintTop_toBottomOf="@+id/edGroup" />

        <EditText
            android:id="@+id/edQuantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="26dp"
            android:layout_marginTop="12dp"
            android:layout_marginRight="26dp"
            android:gravity="left"
            android:hint="@string/integer"
            android:inputType="number"
            android:textSize="18dp"
            app:layout_constraintTop_toBottomOf="@+id/edProduct" />

        <EditText
            android:id="@+id/edUnits"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="26dp"
            android:layout_marginTop="12dp"
            android:layout_marginRight="26dp"
            android:gravity="left"
            android:hint="@string/string"
            android:inputType="textShortMessage"
            android:textSize="18dp"
            app:layout_constraintTop_toBottomOf="@+id/edQuantity" />

        <EditText
            android:id="@+id/edPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="26dp"
            android:layout_marginTop="12dp"
            android:layout_marginRight="26dp"
            android:gravity="left"
            android:hint="@string/decimal_0_00"
            android:inputType="numberDecimal"
            android:textSize="18dp"
            app:layout_constraintTop_toBottomOf="@+id/edUnits" />

        <EditText
            android:id="@+id/edExtraCharge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="26dp"
            android:layout_marginTop="12dp"
            android:layout_marginRight="26dp"
            android:gravity="left"
            android:hint="@string/integer"
            android:inputType="number"
            android:textSize="18dp"
            app:layout_constraintTop_toBottomOf="@+id/edPrice" />


    </LinearLayout>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickSave"
        android:text="@string/save"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="22dp"
        android:layout_marginRight="26dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llEditText" />




</androidx.constraintlayout.widget.ConstraintLayout>