<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrderActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewOrder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="75dp"
        android:background="@drawable/background_border"
        android:paddingTop="6dp"
        tools:layout_editor_absoluteX="-148dp"
        tools:layout_editor_absoluteY="72dp" />

    <ImageView
        android:id="@+id/imgNoData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:alpha="0.1"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/recyclerViewOrder"
        app:srcCompat="@drawable/ic_empty" />

    <TextView
        android:id="@+id/tvNoData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:alpha="0.4"
        android:text="@string/no_data"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgNoData" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="4dp"
        android:text="@string/number_of_all_positions2"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerViewOrder" />

    <TextView
        android:id="@+id/tvNumberOfPosition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:text="4"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/recyclerViewOrder" />

    <TextView
        android:id="@+id/tvFound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:text="@string/found"
        android:textSize="24sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/tvPositionFound"
        app:layout_constraintTop_toBottomOf="@+id/recyclerViewOrder" />

    <TextView
        android:id="@+id/tvPositionFound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="55dp"
        android:layout_marginRight="55dp"
        android:text="2"
        android:textSize="24sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerViewOrder" />


</androidx.constraintlayout.widget.ConstraintLayout>