<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/OrderItemSelectedLayout"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background_border"
            android:padding="6dp">


            <TextView
                android:id="@+id/textView25"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                android:layout_marginEnd="6dp"
                android:layout_marginRight="6dp"
                android:text="@string/selected"
                app:layout_constraintEnd_toStartOf="@+id/textInputLayout"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvProductNameOrderItemSelected"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="4dp"
                android:text="Product Name  Here"
                android:minWidth="70dp"
                android:textColor="#000"

                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvQuantityOrderItemSelected"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginTop="6dp"
                android:text="50"
                android:textColor="#000"
                android:textSize="28sp"
                app:layout_constraintStart_toEndOf="@+id/textView22"
                app:layout_constraintTop_toBottomOf="@+id/tvSellingPriceOrderItemSelected" />

            <TextView
                android:id="@+id/tvUnitsOrderItemSelected"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="16dp"
                android:minWidth="70dp"
                android:text="UN"
                android:textColor="#000"
                android:textStyle="italic"
                app:layout_constraintStart_toEndOf="@+id/tvQuantityOrderItemSelected"
                app:layout_constraintTop_toBottomOf="@+id/tvSellingPriceOrderItemSelected" />

            <TextView
                android:id="@+id/textView7ItemSelected"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="6dp"
                android:text="@string/selling_price"
                android:textColor="#000"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvProductNameOrderItemSelected" />

            <TextView
                android:id="@+id/tvSellingPriceOrderItemSelected"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="6dp"
                android:text="12"
                android:minWidth="70dp"
                android:textColor="#000"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@+id/textView7ItemSelected"
                app:layout_constraintTop_toBottomOf="@+id/tvProductNameOrderItemSelected" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                android:layout_width="68dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/quantityInput"
                    android:layout_width="68dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:inputType="number"
                    android:text="1"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textView22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="16dp"
                android:text="@string/available"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView7ItemSelected" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>